// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildApiResponse should build responses based on examples: getResponseCallback 1`] = `
[
  [
    {
      "dolor": "sit",
      "url": "lorem/ipsum",
    },
  ],
]
`;

exports[`buildApiResponse should build responses based on examples: responses 1`] = `
{
  "basic": [
    {
      "callback": [MockFunction],
      "type": "get",
      "url": "lorem/ipsum",
    },
  ],
  "default": [],
}
`;

exports[`buildApiResponse should get an authorized example: authorized 1`] = `
{
  "default": {
    "content": "Authorization Required",
    "status": 401,
    "type": "text/plain",
  },
  "filteredAndFound": {
    "content": "lorem ipsum dolor sit amet",
    "status": 401,
    "type": "text/plain",
  },
  "filteredAndMissing": {
    "content": "Authorization Required",
    "status": 401,
    "type": "text/plain",
  },
}
`;

exports[`buildApiResponse should get an example: example 1`] = `
{
  "default": {
    "content": "Success",
    "status": 200,
    "type": "text/plain",
  },
  "mockErrorAndFilteredAndMissing": {
    "content": "Error",
    "status": 404,
    "type": "text/plain",
  },
  "mockErrorAndFilteredError": {
    "content": "lorem ipsum dolor sit amet",
    "status": 400,
    "type": "text/plain",
  },
  "mockForcedAndFilteredAndMissing": {
    "content": "404 response",
    "status": 404,
    "type": "text/plain",
  },
  "mockForcedExcessiveStatusHigh": {
    "content": "700 response",
    "status": 500,
    "type": "text/plain",
  },
  "mockForcedExcessiveStatusLow": {
    "content": "-700 response",
    "status": 500,
    "type": "text/plain",
  },
  "mockResponseAndFilteredError": {
    "content": "Success",
    "status": 400,
    "type": "text/plain",
  },
  "mockResponseAndFilteredSuccess": {
    "content": "Success",
    "status": 201,
    "type": "text/plain",
  },
  "mockSuccessAndFilteredAndMissing": {
    "content": "Success",
    "status": 200,
    "type": "text/plain",
  },
  "mockSuccessAndFilteredSuccess": {
    "content": "lorem ipsum dolor sit amet",
    "status": 201,
    "type": "text/plain",
  },
}
`;

exports[`buildApiResponse should process a request with mock settings and return a response: authorized response 1`] = `
[
  [
    "status",
    [
      200,
    ],
  ],
  [
    "set",
    [
      "Cache-Control",
      "mockGetHeader: cache-control",
    ],
  ],
  [
    "set",
    [
      "Content-Type",
      "text/plain",
    ],
  ],
  [
    "send",
    [
      "Success",
    ],
  ],
]
`;

exports[`buildApiResponse should process a request with mock settings and return a response: default response 1`] = `
[
  [
    "status",
    [
      200,
    ],
  ],
  [
    "set",
    [
      "Cache-Control",
      "no-cache",
    ],
  ],
  [
    "set",
    [
      "Content-Type",
      "text/plain",
    ],
  ],
  [
    "send",
    [
      "Success",
    ],
  ],
]
`;

exports[`buildApiResponse should process a request with mock settings and return a response: error response 1`] = `
[
  [
    "status",
    [
      400,
    ],
  ],
  [
    "set",
    [
      "Cache-Control",
      "no-cache",
    ],
  ],
  [
    "set",
    [
      "Content-Type",
      "text/html",
    ],
  ],
  [
    "send",
    [
      "<html><body>lorem ipsum dolor sit</body></html>",
    ],
  ],
]
`;

exports[`buildApiResponse should process a request with mock settings and return a response: not authorized response 1`] = `
[
  [
    "status",
    [
      200,
    ],
  ],
  [
    "set",
    [
      "Cache-Control",
      "no-cache",
    ],
  ],
  [
    "set",
    [
      "Content-Type",
      "text/plain",
    ],
  ],
  [
    "append",
    [
      "WWW-Authenticate",
      "Spoof authentication",
    ],
  ],
  [
    "status",
    [
      401,
    ],
  ],
  [
    "set",
    [
      "Content-Type",
      "text/plain",
    ],
  ],
  [
    "end",
    [
      "Authorization Required",
    ],
  ],
]
`;

exports[`buildApiResponse should process a request with mock settings and return a response: success response 1`] = `
[
  [
    "status",
    [
      201,
    ],
  ],
  [
    "set",
    [
      "Cache-Control",
      "no-cache",
    ],
  ],
  [
    "set",
    [
      "Content-Type",
      "text/html",
    ],
  ],
  [
    "send",
    [
      "<html><body>lorem ipsum dolor sit</body></html>",
    ],
  ],
]
`;

exports[`buildApiResponse should return specific properties: specific properties 1`] = `
{
  "buildResponses": [Function],
  "getAuthExampleResponse": [Function],
  "getExampleResponse": [Function],
  "getMockResponseExample": [Function],
  "getResponseCallback": [Function],
}
`;
